--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -2295,20 +2295,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "ひあぁｰっ! ｸ､ｸ､ｸ､ｸﾓ―っ!! OOﾌﾟﾛﾃﾞｭｰｻｰ! はっ､早くどっかにやってください! そもそも事務所の掃除が不十分だからっ! 日頃から整理整頓をこころがけ……ひっ! ｺｯﾁ来た!",
-                        "comments_my_1": "得手､不得手はあるものです!",
-                        "comments_my_2": "私も､女の子なんです…!",
-                        "comments_my_3": "虫は…………無理っ!",
-                        "comments_my_4": "ﾌﾟﾛﾃﾞｭｰｻｰはｱｲﾄﾞﾙを助けるものでしょう! これも仕事ですよ!",
-                        "comments_my_max": "あわわっ! く､靴にｸﾓが…! 早くとってください! とって～っ!",
-                        "comments_work_1": "いかなる時も､私らしくです…!",
-                        "comments_work_2": "冷静になれば､怖いものなど…!",
-                        "comments_work_3": "と､取り乱しました…",
-                        "comments_work_4": "整理整頓がﾓｯﾄｰです! 汚れや害虫は許しません! 情け無用っ!",
-                        "comments_work_max": "さすがは我が風紀委員会の一員です､OOﾌﾟﾛﾃﾞｭｰｻｰ!",
-                        "comments_work_love_up": "ふぅ～､一安心｡OOﾌﾟﾛﾃﾞｭｰｻｰ､ありがとうございます",
-                        "comments_live": "整理整頓! 基本です!",
-                        "comments_love_max": "事務所の乱れは､心の乱れです! OOﾌﾟﾛﾃﾞｭｰｻｰ､責任とってくだ……ぎゃｰっ! 今度は子ｸﾞﾓがいっぱい! 助けてっ!"
+                        "comment": "히아앗~! 거, 거, 거, 거미~!! OO프로듀서! 빠, 빨리 어디론가 보내주세요! 애초에 사무소 청소가 불충분하니까! 평소부터 정리정돈을 유의해서……힛! 이리로 온다!",
+                        "comments_my_1": "잘하는 것, 미숙한 것이 있는 법입니다!",
+                        "comments_my_2": "저도, 여자애입니다…!",
+                        "comments_my_3": "벌레는………… 무리!",
+                        "comments_my_4": "프로듀서는 아이돌을 돕는 법이겠죠! 이것도 일이에요!",
+                        "comments_my_max": "아와왓! 시, 신발에 거미가…! 빨리 잡아주세요! 잡아~!",
+                        "comments_work_1": "어떤 때라도, 저답게입니다…!",
+                        "comments_work_2": "냉정해지면, 무서운 것 따윈…!",
+                        "comments_work_3": "다, 당황했습니다…",
+                        "comments_work_4": "정리정돈이 모토입니다! 오염과 해충은 용서하지 않습니다! 동정은 필요 없음!",
+                        "comments_work_max": "역시 우리 풍기위원회의 일원입니다, OO 프로듀서!",
+                        "comments_work_love_up": "후우~, 우선 안심. OO 프로듀서, 감사합니다.",
+                        "comments_live": "정리정돈! 기본입니다!",
+                        "comments_love_max": "사무소의 혼란은, 마음의 혼란입니다! OO 프로듀서, 책임져 주…… 꺄~앗! 이번엔 새끼 거미가 가득! 도와줘!"
                     },
                     "voice": {
                         "comment": null,
@@ -2374,20 +2374,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "ﾌﾌﾝｯ♪ｽﾀｲﾘｯｼｭなｼｮｰに相応しい衣装ですね! OOﾌﾟﾛﾃﾞｭｰｻｰの期待に沿うｽﾃｰｼﾞを､お約束しましょう! さぁ! 清く正しく美しいﾌｧｯｼｮﾝｼｮｰの開幕です! 超☆ﾓﾃﾞﾙ冴島清美､行きます!",
-                        "comments_my_1": "得手､不得手はあるものです!",
-                        "comments_my_2": "私も､女の子なんです…!",
-                        "comments_my_3": "ﾗﾝｳｪｲの風紀を守ります!",
-                        "comments_my_4": "華美なｼﾞｭｴﾘｰは…ﾌｧｯｼｮﾝｼｮｰなら､ｱﾘですね! それもﾙｰﾙです!",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰとは､理想を共有できているようですね",
-                        "comments_work_1": "いかなる時も､私らしくです…!",
-                        "comments_work_2": "冷静になれば､怖いものなど…!",
-                        "comments_work_3": "ﾎﾟｰｼﾞﾝｸﾞも覚えましたから!",
-                        "comments_work_4": "着崩すのを美徳とする風潮に､この私が一石を投じましょう!",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰには感謝を込めて､視線を送ります!",
-                        "comments_work_love_up": "ﾙｰﾙを守るｶｯｺよさを､私と一緒にみんなに教えてあげましょう!",
-                        "comments_live": "全員､こちらに注目ｰっ!",
-                        "comments_love_max": "ﾌｧｯｼｮﾝは自由! とは言え､品行方正にまいりましょう! 風紀を乱さぬ美しさを､ともに伝えましょう! OOﾌﾟﾛﾃﾞｭｰｻｰ!"
+                        "comment": "후후훗♪ 스타일리쉬한 쇼에 걸맞는 의상이네요! OO 프로듀서의 기대에 부응하는 스테이지를, 약속하죠! 자! 맑고 바르고 아름다운 패션쇼의 개막입니다! 초☆모델 사에지마 키요미, 갑니다!",
+                        "comments_my_1": "잘하는 것, 미숙한 것이 있는 법입니다!",
+                        "comments_my_2": "저도, 여자애입니다…!",
+                        "comments_my_3": "런웨이의 풍기를 지키겠습니다!",
+                        "comments_my_4": "화려한 쥬얼리는… 패션쇼라면, 괜찮네요! 그것도 룰입니다!",
+                        "comments_my_max": "OO 프로듀서와는, 이상을 공유할 수 있는 것 같네요.",
+                        "comments_work_1": "어떤 때라도, 저답게입니다…!",
+                        "comments_work_2": "냉정해지면, 무서운 것 따윈…!",
+                        "comments_work_3": "포징도 배웠으니까요!",
+                        "comments_work_4": "느슨하게 입기를 미덕으로 삼는 풍조에, 이 제가 돌을 던지죠!",
+                        "comments_work_max": "OO 프로듀서에겐 감사를 담아서, 시선을 보냅니다!",
+                        "comments_work_love_up": "룰을 지키는 멋을, 저와 함께 모두에게 가르쳐 주죠!",
+                        "comments_live": "전원, 이쪽에 주목~!",
+                        "comments_love_max": "패션은 자유! 라고 하지만, 품행방정으로 가죠! 풍기를 어지럽히지 않는 아름다움을, 함께 전하죠! OO 프로듀서!"
                     },
                     "voice": {
                         "comment": null,
