--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -2459,20 +2459,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "『見てください､この草! 実も葉も茎も全部､良い薬になります｡必ず冒険の役に立ちますよ!』乱れた体の規律をﾋﾞｼｯと正す､超☆薬草師ｷﾖﾐ…ふふっ､ﾊﾏﾘ役の予感! あ､戦闘はなるべくﾅｼで!",
-                        "comments_my_1": "規則正しい生活が一番の薬!",
-                        "comments_my_2": "薬学の本で予習! うっ､難しい!",
-                        "comments_my_3": "煎じて飲む…ｳｯﾁﾝ茶みたいです",
-                        "comments_my_4": "勉強したことで仲間を救うって､お芝居の役でも誇らしい!",
-                        "comments_my_max": "ﾊｰﾌﾞﾃｨｰをいれてみたので､どうぞ｡ﾘﾗｯｸｽ効果がありますよ!",
-                        "comments_work_1": "『苦い薬ほどよく効きます!』",
-                        "comments_work_2": "ﾌｧﾝﾀｼﾞｰといえど､風紀は大事!",
-                        "comments_work_3": "『感謝は先人の知恵に､ね』",
-                        "comments_work_4": "『仲間の生活ﾘｽﾞﾑも管理します!』ああ､気持ちいいｾﾘﾌですね!",
-                        "comments_work_max": "私が立派なｱｲﾄﾞﾙになることが､ﾌﾟﾛﾃﾞｭｰｻｰにとって一番の薬!",
-                        "comments_work_love_up": "ﾌﾟﾛﾃﾞｭｰｻｰ､元気回復の薬草をどうぞ｡さぁ､冒険に行きますよ!",
-                        "comments_live": "薬草の力､お見せします!",
-                        "comments_love_max": "冴島清美が秘めた薬効は､まだまだ研究の余地がありそうですよ｡ﾌﾟﾛﾃﾞｭｰｻｰ､私の花も実も全部､試してみてくださいね!"
+                        "comment": "『봐주세요, 이 풀! 열매도 잎도 줄기도 전부, 좋은 약이 됩니다. 분명 모험에 도움이 될 거예요!』흐트러진 몸의 규율을 핏 하고 바로잡는, 초☆약초사 키요미… 후훗, 허벌리 역의 예감! 아, 전투는 되도록 없는 걸로!",
+                        "comments_my_1": "규칙적인 생활이 최고의 약!",
+                        "comments_my_2": "약학 책으로 예습! 읏, 어려워!",
+                        "comments_my_3": "달여 마시는… 울금 차 같습니다.",
+                        "comments_my_4": "공부한 것으로 동료를 구한다니, 연극의 역할이라도 자랑스러워!",
+                        "comments_my_max": "허브티를 넣어 봤으니, 부디. 릴렉스 효과가 있어요!",
+                        "comments_work_1": "『쓴 약일수록 잘 듣습니다!』",
+                        "comments_work_2": "판타지라고 해도, 풍기는 중요!",
+                        "comments_work_3": "『감사는 선인의 지혜에, 네요.』",
+                        "comments_work_4": "『동료의 생활 리듬도 관리합니다!』아아, 기분 좋은 대사네요!",
+                        "comments_work_max": "제가 훌륭한 아이돌이 되는 것이, 프로듀서께 있어서 최고의 약!",
+                        "comments_work_love_up": "프로듀서, 원기회복 약초를 부디. 자, 모험을 떠나죠!",
+                        "comments_live": "약초의 힘, 보여드리죠!",
+                        "comments_love_max": "사에지마 키요미가 감춘 약효는, 아직 연구의 여지가 있는 것 같아요. 프로듀서, 제 꽃도 열매도 전부, 시험해 주세요!"
                     },
                     "voice": {
                         "comment": null,
@@ -2536,20 +2536,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "『幾多の冒険で得た知識が､遂に結実しました! これが夢の万能薬です!』地道に努力して､超☆錬金術師の肩書を得る…良いですね! 模範的な物語です! みんなも感銘を受けますよ!",
-                        "comments_my_1": "規則正しい生活が一番の薬!",
-                        "comments_my_2": "薬学の本で予習! うっ､難しい!",
-                        "comments_my_3": "知性派の役ですから､ﾒｶﾞﾈで!",
-                        "comments_my_4": "現実でも､錬金術は今の化学に繋がってるんですね｡なるほど!",
-                        "comments_my_max": "超☆ｱｲﾄﾞﾙ･冴島清美を錬成したﾌﾟﾛﾃﾞｭｰｻｰこそ､天才錬金術師!",
-                        "comments_work_1": "『苦い薬ほどよく効きます!』",
-                        "comments_work_2": "ﾌｧﾝﾀｼﾞｰといえど､風紀は大事!",
-                        "comments_work_3": "『分量や用法は厳密に!』",
-                        "comments_work_4": "『日々の研鑽が黄金を生みます!』ｱｲﾄﾞﾙにも通じる言葉ですね",
-                        "comments_work_max": "輝く黄金を錬成できるｱｲﾄﾞﾙになってみせますよ､ﾌﾟﾛﾃﾞｭｰｻｰ!",
-                        "comments_work_love_up": "笑顔もまた薬…なるほど､研究ﾉｰﾄに書き留めておきます!",
-                        "comments_live": "黄金を手にするために!",
-                        "comments_love_max": "ｱｲﾄﾞﾙはきっと､人の心を救う万能薬になれるはずです…だから､その錬成の秘密を一緒に探し求めましょうね､ﾌﾟﾛﾃﾞｭｰｻｰ!"
+                        "comment": "『수많은 모험으로 얻은 지식이, 드디어 결실을 맺었습니다! 이게 꿈의 만병통치약입니다!』꾸준히 노력해서, 초☆연금술사의 직함을 얻는다… 좋네요! 모범적인 이야기입니다! 다들 감명 받을 거예요!",
+                        "comments_my_1": "규칙적인 생활이 최고의 약!",
+                        "comments_my_2": "약학 책으로 예습! 읏, 어려워!",
+                        "comments_my_3": "지성파 역할이니까요, 안경으로!",
+                        "comments_my_4": "현실에서도, 연금술은 지금의 화학으로 이어져 있군요. 과연!",
+                        "comments_my_max": "초☆아이돌･사에지마 키요미를 연성한 프로듀서야말로, 천재 연금술사!",
+                        "comments_work_1": "『쓴 약일수록 잘 듣습니다!』",
+                        "comments_work_2": "판타지라고 해도, 풍기는 중요!",
+                        "comments_work_3": "『분량과 용법은 엄밀히!』",
+                        "comments_work_4": "『매일의 연찬이 황금을 낳습니다!』아이돌에도 통하는 말이네요.",
+                        "comments_work_max": "빛나는 황금을 연성할 수 있는 아이돌이 되어 보일게요, 프로듀서!",
+                        "comments_work_love_up": "미소도 또한 약… 과연, 연구 노트에 적어두겠습니다!",
+                        "comments_live": "황금을 손에 넣기 위해서!",
+                        "comments_love_max": "아이돌은 분명, 사람의 마음을 구하는 만병통치약이 될 수 있습니다… 그러니까, 그 연성의 비밀을 함께 찾아보죠, 프로듀서!"
                     },
                     "voice": {
                         "comment": null,
