--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -2383,7 +2383,7 @@ kg
                         "comments_work_1": "어떤 때라도, 저답게입니다…!",
                         "comments_work_2": "냉정해지면, 무서운 것 따윈…!",
                         "comments_work_3": "포징도 배웠으니까요!",
-                        "comments_work_4": "느슨하게 입기를 미덕으로 삼는 풍조에, 이 제가 돌을 던지죠!",
+                        "comments_work_4": "풀어헤치는 패션을 미덕으로 삼는 풍조에, 이 제가 돌을 던지죠!",
                         "comments_work_max": "OO 프로듀서에겐 감사를 담아서, 시선을 보냅니다!",
                         "comments_work_love_up": "룰을 지키는 멋을, 저와 함께 모두에게 가르쳐 주죠!",
                         "comments_live": "전원, 이쪽에 주목~!",
@@ -2613,20 +2613,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "あっ､OOﾌﾟﾛﾃﾞｭｰｻｰ! ﾊﾞｰﾍﾞﾙなんて超☆余裕です! …ふぬっ!? だ､大丈夫です! ﾄﾚｰﾆﾝｸﾞを重ねてきましたから｡LIVEで完璧なﾊﾟﾌｫｰﾏﾝｽをお届けするためには…! ふっ､くぬぬっ!",
-                        "comments_my_1": "日々の努力が実を結びます!",
-                        "comments_my_2": "できると信じれば､できます!",
-                        "comments_my_3": "ﾒｶﾞﾈは…危ないので外しました",
-                        "comments_my_4": "もっと軽いのから…い､いいえっ! 必ずやり遂げてみせます!",
-                        "comments_my_max": "習慣づけが大事です! ﾌﾟﾛﾃﾞｭｰｻｰも一緒に筋ﾄﾚしましょう!",
-                        "comments_work_1": "私がみんなの手本になります!",
-                        "comments_work_2": "超☆ｶｯｺｲｲ私を､お見逃しなく!",
-                        "comments_work_3": "腹筋は…今後の課題にします!",
-                        "comments_work_4": "超☆筋肉への道は険しいですね! でも頑張ります! くぬｰっ! ",
-                        "comments_work_max": "筋ﾄﾚ中は､水分補給も忘れずに｡ﾌﾟﾛﾃﾞｭｰｻｰの分も用意済みです!",
-                        "comments_work_love_up": "規律も筋肉も､清く､正しく｡ですよね､OOﾌﾟﾛﾃﾞｭｰｻｰ!",
-                        "comments_live": "一に筋肉､二に風紀!!",
-                        "comments_love_max": "OOﾌﾟﾛﾃﾞｭｰｻｰが見守ってくれたので､効率よくできました! 目標に向かって努力するのは気持ちがいいですね!"
+                        "comment": "앗, OO 프로듀서! 바벨 따위 초☆여유입니다! …후읏!? 괘, 괜찮습니다! 트레이닝을 거듭해 왔으니까요. LIVE에서 완벽한 퍼포먼스를 전하기 위해선…! 훗, 그으읏!",
+                        "comments_my_1": "매일의 노력이 열매를 맺습니다!",
+                        "comments_my_2": "가능하다고 믿으면, 가능합니다!",
+                        "comments_my_3": "안경은… 위험하니까 벗었습니다.",
+                        "comments_my_4": "좀더 가벼운 걸… 아, 아뇨! 꼭 완수하고 말겠습니다!",
+                        "comments_my_max": "습관화가 중요합니다! 프로듀서도 함께 근트레하죠!",
+                        "comments_work_1": "제가 모두의 본보기가 되겠습니다!",
+                        "comments_work_2": "초☆멋진 저를, 놓치지 마세요!",
+                        "comments_work_3": "복근은… 앞으로의 과제로 하겠습니다!",
+                        "comments_work_4": "초☆근육으로 가는 길은 험난하네요! 그래도 노력하겠습니다! 그읏~! ",
+                        "comments_work_max": "근트레 중엔, 수분 보충도 잊지 말고. 프로듀서 몫도 준비 끝났습니다!",
+                        "comments_work_love_up": "규율도 근육도, 맑고, 바르게. 인 거네요, OO 프로듀서!",
+                        "comments_live": "하나에 근육, 둘에 풍기!!",
+                        "comments_love_max": "OO 프로듀서가 지켜봐주셔서, 효율적으로 할 수 있었습니다! 목표를 향해 노력해 가는 건 기분 좋네요!"
                     },
                     "voice": {
                         "comment": null,
@@ -2697,20 +2697,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "完璧な歌とﾀﾞﾝｽで､1秒だって見逃せないｽﾃｰｼﾞにしますよ｡おっと! よそ見してたら風紀違反で取り締まりますからね! ﾌｧﾝのみなさん､準備はいいですか? それでは､ｲｯﾂ･ｱ･ｼｮｰ☆ﾀｲﾑ!",
-                        "comments_my_1": "日々の努力が実を結びます!",
-                        "comments_my_2": "できると信じれば､できます!",
-                        "comments_my_3": "ﾈｸﾀｲは緩めが､ここでのﾙｰﾙ!",
-                        "comments_my_4": "資料をたくさん見てﾏｲｸﾊﾟﾌｫｰﾏﾝｽを勉強しました! ﾊﾞｯﾁﾘです!",
-                        "comments_my_max": "ﾘｸｴｽﾄも受け付けますよ｡はい､OOﾌﾟﾛﾃﾞｭｰｻｰ､どうぞ!",
-                        "comments_work_1": "私がみんなの手本になります!",
-                        "comments_work_2": "超☆ｶｯｺｲｲ私を､お見逃しなく!",
-                        "comments_work_3": "ﾏﾆｷｭｱはLIVEなので許可します!",
-                        "comments_work_4": "時間を忘れるLIVEにしましょう! …あ､でも門限は厳守ですよ!",
-                        "comments_work_max": "ﾌﾟﾛﾃﾞｭｰｻｰのﾘｸｴｽﾄ…OK! しかと承りました! ﾐｭｰｼﾞｯｸ､ｽﾀｰﾄ♪",
-                        "comments_work_love_up": "OOﾌﾟﾛﾃﾞｭｰｻｰ､今日は超☆ｶｯｺよく決めますからね!",
-                        "comments_live": "ｽﾃｰｼﾞにふさわしい風紀を!",
-                        "comments_love_max": "超☆ｽﾀｲﾘｯｼｭなﾊﾟﾌｫｰﾏﾝｽ､大成功です! OOﾌﾟﾛﾃﾞｭｰｻｰが夢中になってくれている顔､ｽﾃｰｼﾞ上から超☆ﾁｪｯｸ完了です!"
+                        "comment": "완벽한 노래와 댄스로, 1초라도 놓칠 수 없는 스테이지로 만들죠. 아이쿠! 한눈 팔다가는 풍기위반으로 단속할 거니까요! 팬 여러분, 준비는 됐나요? 그러면, 잇츠･어･쇼☆타임!",
+                        "comments_my_1": "매일의 노력이 열매를 맺습니다!",
+                        "comments_my_2": "가능하다고 믿으면, 가능합니다!",
+                        "comments_my_3": "넥타이는 느슨한 게, 이곳에서의 룰!",
+                        "comments_my_4": "자료를 많이 보고 마이크 퍼포먼스를 공부했습니다! 훌륭합니다!",
+                        "comments_my_max": "리퀘스트도 받을게요. 네, OO 프로듀서, 부디!",
+                        "comments_work_1": "제가 모두의 본보기가 되겠습니다!",
+                        "comments_work_2": "초☆멋진 저를, 놓치지 마세요!",
+                        "comments_work_3": "매니큐어는 LIVE이므로 허가합니다!",
+                        "comments_work_4": "시간을 잊는 LIVE로 만들죠! …아, 그래도 통금은 엄수예요!",
+                        "comments_work_max": "프로듀서의 리퀘스트… OK! 확실히 받았습니다! 뮤직, 스타트♪",
+                        "comments_work_love_up": "OO 프로듀서, 오늘은 초☆멋지게 결정할 테니까요!",
+                        "comments_live": "스테이지에 어울리는 풍기를!",
+                        "comments_love_max": "초☆스타일리쉬한 퍼포먼스, 대성공입니다! OO 프로듀서가 열중해 주고 있는 얼굴, 스테이지 위에서 초☆체크 완료입니다!"
                     },
                     "voice": {
                         "comment": null,
