--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -2787,20 +2787,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "どうです､この凛々しい姿! 夏空が広がる超☆楽園にも､風紀を乱す誘惑が潜んでいます! ならば私が守護者として､秩序を守ってみせましょう! OOﾌﾟﾛﾃﾞｭｰｻｰも､続いてください!",
-                        "comments_my_1": "夏の日差しでｽｯｷﾘしましょう",
-                        "comments_my_2": "準備運動､してきましたか?",
-                        "comments_my_3": "一番健全な水着を選びました!",
-                        "comments_my_4": "風紀を乱す夏の誘惑｡手強い敵ですが､やりがいがあります!",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰの超☆ﾊﾞｶﾝｽも､私にお任せください!",
-                        "comments_work_1": "健全な視線でお願いします!",
-                        "comments_work_2": "みなさんの水着ﾁｪｯｸ! ｾｰﾌです!",
-                        "comments_work_3": "ｽﾋﾟｰｶｰは最終手段｡基本は声で!",
-                        "comments_work_4": "今日の私は一味違います…｡なんと! 腕章が防水仕様なんです!",
-                        "comments_work_max": "む? ﾈｸﾀｲ曲がってますよ､気を付けてください｡…直りました!",
-                        "comments_work_love_up": "OOﾌﾟﾛﾃﾞｭｰｻｰ､超☆風紀活動を始めますよ! ほらっ!",
-                        "comments_live": "こらｰ､海は走らなｰい!!",
-                        "comments_love_max": "OOﾌﾟﾛﾃﾞｭｰｻｰはいつだって､みんなを導く存在なんですからね｡夏の太陽のような爽やかさを､共に目指しましょう!"
+                        "comment": "어떤가요, 이 늠름한 모습! 여름 하늘이 펼쳐지는 초☆낙원에도, 풍기를 문란케 하는 유혹이 숨어 있습니다! 그렇다면 제가 수호자로서, 질서를 지켜 보이죠! OO 프로듀서도, 따라와 주세요!",
+                        "comments_my_1": "여름 햇살로 산뜻해지죠.",
+                        "comments_my_2": "준비운동, 해오셨나요?",
+                        "comments_my_3": "가장 건전한 수영복을 선택했습니다!",
+                        "comments_my_4": "풍기를 문란케 하는 여름의 유혹. 만만치 않은 적이었지만, 보람이 있습니다!",
+                        "comments_my_max": "OO 프로듀서의 초☆바캉스도, 제게 맡겨주세요!",
+                        "comments_work_1": "건전한 시선 부탁드립니다!",
+                        "comments_work_2": "여러분의 수영복 체크! 세이프입니다!",
+                        "comments_work_3": "스피커는 최종수단. 기본은 목소리로!",
+                        "comments_work_4": "오늘의 저는 어딘가 다릅니다…. 무려! 완장이 방수사양입니다!",
+                        "comments_work_max": "음? 넥타이 흐트러져 있어요, 눈치채주세요. …바로잡았습니다!",
+                        "comments_work_love_up": "OO 프로듀서, 초☆풍기활동을 시작해요! 이봐!",
+                        "comments_live": "이봐~, 바다에선 달리지 마!!",
+                        "comments_love_max": "OO 프로듀서는 언제라도, 모두를 이끄는 존재니까요. 여름의 태양 같은 상쾌함을, 함께 목표로 하죠!"
                     },
                     "voice": {
                         "comment": null,
@@ -2871,7 +2871,7 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "花が咲き乱れ蝶が舞う､楽園の景色｡でも主役は､舞台で踊る夏の妖精たちです! 夏の魔法を宿した､宝石の輝きをこの胸に! 超☆楽園を味わい尽くす夢の世界へ､みなさんを招待しますよ!",
+                        "comment": "꽃이 만발하고 나비가 춤추는, 낙원의 경치. 하지만 주역은, 무대에서 춤추는 여름의 요정들입니다! 여름의 마법을 머금은, 보석의 빛을 이 가슴에! 초☆낙원을 맛보는 꿈의 세계로, 여러분을 초대합니다すよ!",
                         "comments_my_1": "夏の日差しでｽｯｷﾘしましょう",
                         "comments_my_2": "準備運動､してきましたか?",
                         "comments_my_3": "はじけ過ぎない夏､ですよ!",
