--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -2871,20 +2871,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "꽃이 만발하고 나비가 춤추는, 낙원의 경치. 하지만 주역은, 무대에서 춤추는 여름의 요정들입니다! 여름의 마법을 머금은, 보석의 빛을 이 가슴에! 초☆낙원을 맛보는 꿈의 세계로, 여러분을 초대합니다すよ!",
-                        "comments_my_1": "夏の日差しでｽｯｷﾘしましょう",
-                        "comments_my_2": "準備運動､してきましたか?",
-                        "comments_my_3": "はじけ過ぎない夏､ですよ!",
-                        "comments_my_4": "おへそを出す衣装は､慣れていません…｡でも､今は…気合で!",
-                        "comments_my_max": "清く正しい私の夏は､OOﾌﾟﾛﾃﾞｭｰｻｰがいてこそです",
-                        "comments_work_1": "健全な視線でお願いします!",
-                        "comments_work_2": "みなさんの水着ﾁｪｯｸ! ｾｰﾌです!",
-                        "comments_work_3": "頭脳担当の妖精､それが私です!",
-                        "comments_work_4": "体が熱くなるのは､夏のせいだけじゃないですね…刺激的です!",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰの夏も､私が盛り上げてあげますよ!",
-                        "comments_work_love_up": "輝くｴﾒﾗﾙﾄﾞは叡智の光｡OOﾌﾟﾛﾃﾞｭｰｻｰも照らします!",
-                        "comments_live": "これぞｴﾒﾗﾙﾄﾞﾏｼﾞｯｸです!",
-                        "comments_love_max": "心を惑わす夏の魔法も､私には効きませんよ｡それより先にOOﾌﾟﾛﾃﾞｭｰｻｰがかけた､ｱｲﾄﾞﾙの魔法に夢中ですからね!"
+                        "comment": "꽃이 만발하고 나비가 춤추는, 낙원의 경치. 하지만 주역은, 무대에서 춤추는 여름의 요정들입니다! 여름의 마법을 머금은, 보석의 빛을 이 가슴에! 초☆낙원을 맛보는 꿈의 세계로, 여러분을 초대합니다!",
+                        "comments_my_1": "여름 햇살로 산뜻해지죠.",
+                        "comments_my_2": "준비운동, 해오셨나요?",
+                        "comments_my_3": "과하게 튀지 않는 여름, 이에요!",
+                        "comments_my_4": "배꼽을 드러내는 의상은, 익숙하지 않습니다…. 그래도, 지금은… 기합으로!",
+                        "comments_my_max": "맑고 바른 저의 여름은, OO 프로듀서가 있어야만 합니다.",
+                        "comments_work_1": "건전한 시선 부탁드립니다!",
+                        "comments_work_2": "여러분의 수영복 체크! 세이프입니다!",
+                        "comments_work_3": "두뇌담당 요정, 그게 저입니다!",
+                        "comments_work_4": "몸이 뜨거워지는 건, 여름 탓만은 아니네요… 자극적입니다!",
+                        "comments_work_max": "OO 프로듀서의 여름도, 제가 고조시켜드릴게요!",
+                        "comments_work_love_up": "빛나는 에메랄드는 예지의 빛. OO 프로듀서도 비춥니다!",
+                        "comments_live": "이거야말로 에메랄드 매직입니다!",
+                        "comments_love_max": "마음을 유혹하는 여름의 마법도, 제게는 효과가 없어요. 그보다 먼저 OO 프로듀서가 걸어준, 아이돌의 마법에 열중하니까요!"
                     },
                     "voice": {
                         "comment": null,
