--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -2961,20 +2961,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "どうです､この凛々しい姿! 夏空が広がる超☆楽園にも､風紀を乱す誘惑が潜んでいます! ならば私が守護者として､秩序を守ってみせましょう! OOﾌﾟﾛﾃﾞｭｰｻｰも､続いてください!",
-                        "comments_my_1": "夏の日差しでｽｯｷﾘしましょう",
-                        "comments_my_2": "準備運動､してきましたか?",
-                        "comments_my_3": "一番健全な水着を選びました!",
-                        "comments_my_4": "風紀を乱す夏の誘惑｡手強い敵ですが､やりがいがあります!",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰの超☆ﾊﾞｶﾝｽも､私にお任せください!",
-                        "comments_work_1": "健全な視線でお願いします!",
-                        "comments_work_2": "みなさんの水着ﾁｪｯｸ! ｾｰﾌです!",
-                        "comments_work_3": "ｽﾋﾟｰｶｰは最終手段｡基本は声で!",
-                        "comments_work_4": "今日の私は一味違います…｡なんと! 腕章が防水仕様なんです!",
-                        "comments_work_max": "む? ﾈｸﾀｲ曲がってますよ､気を付けてください｡…直りました!",
-                        "comments_work_love_up": "OOﾌﾟﾛﾃﾞｭｰｻｰ､超☆風紀活動を始めますよ! ほらっ!",
-                        "comments_live": "こらｰ､海は走らなｰい!!",
-                        "comments_love_max": "OOﾌﾟﾛﾃﾞｭｰｻｰはいつだって､みんなを導く存在なんですからね｡夏の太陽のような爽やかさを､共に目指しましょう!"
+                        "comment": "어떤가요, 이 늠름한 모습! 여름 하늘이 펼쳐지는 초☆낙원에도, 풍기를 문란케 하는 유혹이 숨어 있습니다! 그렇다면 제가 수호자로서, 질서를 지켜 보이죠! OO 프로듀서도, 따라와 주세요!",
+                        "comments_my_1": "여름 햇살로 산뜻해지죠.",
+                        "comments_my_2": "준비운동, 해오셨나요?",
+                        "comments_my_3": "가장 건전한 수영복을 선택했습니다!",
+                        "comments_my_4": "풍기를 문란케 하는 여름의 유혹. 만만치 않은 적이었지만, 보람이 있습니다!",
+                        "comments_my_max": "OO 프로듀서의 초☆바캉스도, 제게 맡겨주세요!",
+                        "comments_work_1": "건전한 시선 부탁드립니다!",
+                        "comments_work_2": "여러분의 수영복 체크! 세이프입니다!",
+                        "comments_work_3": "스피커는 최종수단. 기본은 목소리로!",
+                        "comments_work_4": "오늘의 저는 어딘가 다릅니다…. 무려! 완장이 방수사양입니다!",
+                        "comments_work_max": "음? 넥타이 흐트러져 있어요, 눈치채주세요. …바로잡았습니다!",
+                        "comments_work_love_up": "OO 프로듀서, 초☆풍기활동을 시작해요! 이봐!",
+                        "comments_live": "이봐~, 바다에선 달리지 마!!",
+                        "comments_love_max": "OO 프로듀서는 언제라도, 모두를 이끄는 존재니까요. 여름의 태양 같은 상쾌함을, 함께 목표로 하죠!"
                     },
                     "voice": {
                         "comment": null,
@@ -3045,20 +3045,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "花が咲き乱れ蝶が舞う､楽園の景色｡でも主役は､舞台で踊る夏の妖精たちです! 夏の魔法を宿した､宝石の輝きをこの胸に! 超☆楽園を味わい尽くす夢の世界へ､みなさんを招待しますよ!",
-                        "comments_my_1": "夏の日差しでｽｯｷﾘしましょう",
-                        "comments_my_2": "準備運動､してきましたか?",
-                        "comments_my_3": "はじけ過ぎない夏､ですよ!",
-                        "comments_my_4": "おへそを出す衣装は､慣れていません…｡でも､今は…気合で!",
-                        "comments_my_max": "清く正しい私の夏は､OOﾌﾟﾛﾃﾞｭｰｻｰがいてこそです",
-                        "comments_work_1": "健全な視線でお願いします!",
-                        "comments_work_2": "みなさんの水着ﾁｪｯｸ! ｾｰﾌです!",
-                        "comments_work_3": "頭脳担当の妖精､それが私です!",
-                        "comments_work_4": "体が熱くなるのは､夏のせいだけじゃないですね…刺激的です!",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰの夏も､私が盛り上げてあげますよ!",
-                        "comments_work_love_up": "輝くｴﾒﾗﾙﾄﾞは叡智の光｡OOﾌﾟﾛﾃﾞｭｰｻｰも照らします!",
-                        "comments_live": "これぞｴﾒﾗﾙﾄﾞﾏｼﾞｯｸです!",
-                        "comments_love_max": "心を惑わす夏の魔法も､私には効きませんよ｡それより先にOOﾌﾟﾛﾃﾞｭｰｻｰがかけた､ｱｲﾄﾞﾙの魔法に夢中ですからね!"
+                        "comment": "꽃이 만발하고 나비가 춤추는, 낙원의 경치. 하지만 주역은, 무대에서 춤추는 여름의 요정들입니다! 여름의 마법을 머금은, 보석의 빛을 이 가슴에! 초☆낙원을 맛보는 꿈의 세계로, 여러분을 초대합니다!",
+                        "comments_my_1": "여름 햇살로 산뜻해지죠.",
+                        "comments_my_2": "준비운동, 해오셨나요?",
+                        "comments_my_3": "과하게 튀지 않는 여름, 이에요!",
+                        "comments_my_4": "배꼽을 드러내는 의상은, 익숙하지 않습니다…. 그래도, 지금은… 기합으로!",
+                        "comments_my_max": "맑고 바른 저의 여름은, OO 프로듀서가 있어야만 합니다.",
+                        "comments_work_1": "건전한 시선 부탁드립니다!",
+                        "comments_work_2": "여러분의 수영복 체크! 세이프입니다!",
+                        "comments_work_3": "두뇌담당 요정, 그게 저입니다!",
+                        "comments_work_4": "몸이 뜨거워지는 건, 여름 탓만은 아니네요… 자극적입니다!",
+                        "comments_work_max": "OO 프로듀서의 여름도, 제가 고조시켜드릴게요!",
+                        "comments_work_love_up": "빛나는 에메랄드는 예지의 빛. OO 프로듀서도 비춥니다!",
+                        "comments_live": "이거야말로 에메랄드 매직입니다!",
+                        "comments_love_max": "마음을 유혹하는 여름의 마법도, 제게는 효과가 없어요. 그보다 먼저 OO 프로듀서가 걸어준, 아이돌의 마법에 열중하니까요!"
                     },
                     "voice": {
                         "comment": null,
@@ -3129,20 +3129,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "よし…設計図の通りに進んでいますね｡雪像作りは全員初めてですが､熱い団結できっと良い結果を導き出せるでしょう! しかし､油断は禁物です｡ﾁｪｯｸを怠らず､超☆完璧を目指しましょう!",
-                        "comments_my_1": "ｱｰﾄのｾﾝｽは…鋭意習得中です!",
-                        "comments_my_2": "この寒さ…なかなか手強いです",
-                        "comments_my_3": "完成まで､超☆取り締まります!",
-                        "comments_my_4": "手が､かじかんで…いえ､何のこれしき! ぐｰぱｰしますっ!",
-                        "comments_my_max": "むむ…なるほど､そこに雪を足すべき…と｡さすがの見解です!",
-                        "comments_work_1": "風紀を守って作業しましょう!",
-                        "comments_work_2": "予習は完璧ですから!",
-                        "comments_work_3": "今日の私は､超☆防寒対策です!",
-                        "comments_work_4": "ここ､もう少し削ってみましょう! よりﾊﾞﾗﾝｽが整いそうです!",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰと共にあれば､雪もまた温かし､ですね!",
-                        "comments_work_love_up": "OOﾌﾟﾛﾃﾞｭｰｻｰも意見を! ﾀﾞﾌﾞﾙﾁｪｯｸでｸｵﾘﾃｨ向上です!",
-                        "comments_live": "…そこ! 削って! 今です!",
-                        "comments_love_max": "どれだけ寒かろうと､負けはしません! 何事も屈せず､超☆やり遂げる精神を､OOﾌﾟﾛﾃﾞｭｰｻｰに教わっていますから!"
+                        "comment": "좋아… 설계도대로 진행되고 있네요. 설상 제작은 전원 처음이지만, 뜨거운 단결로 분명 좋은 결과를 이끌어낼 수 있을 거예요! 하지만, 방심은 금물입니다. 체크를 게을리 하지 말고, 초☆완벽을 목표로 하죠!",
+                        "comments_my_1": "아트 센스는… 예의습득중입니다!",
+                        "comments_my_2": "이 추위… 꽤나 힘듭니다.",
+                        "comments_my_3": "완성까지, 초☆단속합니다!",
+                        "comments_my_4": "손이, 곱아서… 아니, 무슨 이쯤이야! 쥐었다 폈다 하겠습니다!",
+                        "comments_my_max": "으음… 과연, 거기에 눈을 보탠다… 고. 역시나의 견해입니다!",
+                        "comments_work_1": "풍기를 지켜서 작업하죠!",
+                        "comments_work_2": "예습은 완벽하니까요!",
+                        "comments_work_3": "오늘의 저는, 초☆방한대책입니다!",
+                        "comments_work_4": "여기, 조금 더 깎아보죠! 보다 밸런스가 갖춰질 것 같습니다!",
+                        "comments_work_max": "OO 프로듀서와 함께 있으면, 눈도 따뜻, 하네요!",
+                        "comments_work_love_up": "OO 프로듀서도 의견을! 더블 체크로 퀄리티 향상입니다!",
+                        "comments_live": "…거기! 깎아서! 지금입니다!",
+                        "comments_love_max": "아무리 춥더라도, 지지 않습니다! 어떤 일도 굽히지 않고, 초☆완수하는 정신을, OO 프로듀서에게 배우고 있으니까요!"
                     },
                     "voice": {
                         "comment": null,
