--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -3212,20 +3212,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "おやおや? OOﾌﾟﾛﾃﾞｭｰｻｰ､寝癖がついてますよ? いけませんね｡超☆風紀委員として､絶対に見逃すわけにはいきません! 今すぐ直しましょう! ささっ､そこに座ってください!",
-                        "comments_my_1": "身だしなみは､心を映す鏡です!",
-                        "comments_my_2": "今日も一日､清く正しく美しく!",
-                        "comments_my_3": "抜き打ちした甲斐がありました",
-                        "comments_my_4": "みなさんの身だしなみを徹底改善します! 腕の見せ所ですね!",
-                        "comments_my_max": "どれどれ…いいですね! Yｼｬﾂはﾊﾟﾘｯと清潔に｡感心感心♪",
-                        "comments_work_1": "私はもちろん隅々まで完璧です",
-                        "comments_work_2": "自らが模範となる…当然です!",
-                        "comments_work_3": "事務所全員をﾁｪｯｸしますとも!",
-                        "comments_work_4": "寝癖直しｳｫｰﾀｰに､ﾊｰﾄﾞﾜｯｸｽもありますよ｡抜かりありません!",
-                        "comments_work_max": "むむ!? ｽｰﾂにｼﾜが…! 今すぐ脱いでください! ｱｲﾛﾝかけます!",
-                        "comments_work_love_up": "もちろん髪以外もﾁｪｯｸします! ﾌﾟﾛﾃﾞｭｰｻｰ､まさか不都合でも?",
-                        "comments_live": "そこ! 寝癖が立ってます!",
-                        "comments_love_max": "良き仕事をするためには､良き姿で｡大人のﾏﾅｰです! OOﾌﾟﾛﾃﾞｭｰｻｰも良き指導者として､常に清く美しくいましょう!"
+                        "comment": "이런이런? OO 프로듀서, 까치집이 있네요? 안되겠네요. 초☆풍기위원으로서, 절대로 넘어갈 수 없습니다! 지금 바로 고치죠! 샤샥, 거기 앉아주세요!",
+                        "comments_my_1": "몸가짐은, 마음을 비추는 거울입니다!",
+                        "comments_my_2": "오늘도 하루, 맑고 바르고 아름답게!",
+                        "comments_my_3": "불심검문한 보람이 있었습니다.",
+                        "comments_my_4": "모두의 몸가짐을 철저하게 개선합니다! 솜씨를 보여줄 때네요!",
+                        "comments_my_max": "어디보자… 좋네요! Y셔츠는 빠릿하고 청결하게. 감탄감탄♪",
+                        "comments_work_1": "저는 물론 구석구석까지 완벽합니다.",
+                        "comments_work_2": "스스로 모범이 된다… 당연합니다!",
+                        "comments_work_3": "사무소 전원을 체크하게 되더라도!",
+                        "comments_work_4": "까치집 고치는 물에, 헤어 왁스도 있어요. 빠트리면 안돼요!",
+                        "comments_work_max": "으음!? 슈트에 주름이…! 지금 당장 벗어주세요! 다리미질할게요!",
+                        "comments_work_love_up": "물론 머리 말고도 체크합니다! 프로듀서, 설마 곤란한 거라도?",
+                        "comments_live": "거기! 까치집이 서있습니다!",
+                        "comments_love_max": "좋은 일을 하기 위해선, 좋은 모습으로. 어른의 매너입니다! OO 프로듀서도 좋은 지도자로서, 언제나 맑고 아름다워지죠!"
                     },
                     "voice": {
                         "comment": null,
@@ -3289,20 +3289,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "ﾌﾌｯ…どうですか! ｴﾚｶﾞﾝﾄな物腰に､ﾄﾞﾚｽのｼﾙｴｯﾄが映えるでしょう? 内なる美しさを存分に引き出すﾄﾞﾚｽﾌﾞﾗﾝﾄﾞ…そのｲﾒｰｼﾞﾓﾃﾞﾙに選ばれたなんて､光栄です｡わかってますね､ﾌﾟﾛﾃﾞｭｰｻｰ!",
-                        "comments_my_1": "身だしなみは､心を映す鏡です!",
-                        "comments_my_2": "今日も一日､清く正しく美しく!",
-                        "comments_my_3": "気品あふれるﾀﾞﾘｱのように…",
-                        "comments_my_4": "背筋を伸ばし､ﾋｰﾙは鳴らさずに…｡一流ｾﾚﾌﾞに学んだﾏﾅｰです!",
-                        "comments_my_max": "ﾙｰﾙの中に息づく美しさ､ﾌﾟﾛﾃﾞｭｰｻｰには正しく伝わっています!",
-                        "comments_work_1": "私はもちろん隅々まで完璧です",
-                        "comments_work_2": "自らが模範となる…当然です!",
-                        "comments_work_3": "社交界のﾙｰﾙは調査済です!",
-                        "comments_work_4": "ﾄﾞﾚｽに負けないｼﾞｭｴﾘｰも､ｶｸﾃﾙﾄﾞﾚｽには欠かせません! ｷﾗｯ♪",
-                        "comments_work_max": "撮影前の身だしなみﾁｪｯｸ…ﾌﾟﾛﾃﾞｭｰｻｰ､徹底的にお願いします!",
-                        "comments_work_love_up": "OOﾌﾟﾛﾃﾞｭｰｻｰも驚くほど､上品なｵｰﾗが出てるはず!",
-                        "comments_live": "風紀あふれるﾊﾟｰﾃｨｰを!",
-                        "comments_love_max": "ふふふ…OOﾌﾟﾛﾃﾞｭｰｻｰ､その視線…わかりますよ｡社交界の華と言いたいんでしょう? 今回のお仕事､大成功ですね!"
+                        "comment": "후훗… 어떤가요! 엘레강스한 태도에, 드레스의 실루엣이 빛나죠? 내적인 아름다움을 충분히 이끌어내는 드레스 브랜드… 그 이미지 모델에 뽑히다니, 영광입니다. 이해되죠, 프로듀서!",
+                        "comments_my_1": "몸가짐은, 마음을 비추는 거울입니다!",
+                        "comments_my_2": "오늘도 하루, 맑고 바르고 아름답게!",
+                        "comments_my_3": "기품 넘치는 달리아처럼…",
+                        "comments_my_4": "등을 펴고, 힐은 소리를 울리지 않고…. 일류 세레브에게 배운 매너입니다!",
+                        "comments_my_max": "룰 안에 숨쉬는 아름다움, 프로듀서에겐 올바르게 전해지고 있습니다!",
+                        "comments_work_1": "저는 물론 구석구석까지 완벽합니다.",
+                        "comments_work_2": "스스로 모범이 된다… 당연합니다!",
+                        "comments_work_3": "사교계의 룰은 조사 완료입니다!",
+                        "comments_work_4": "드레스에 지지 않는 쥬얼리도, 칵테일 드레스엔 빠트릴 수 없습니다! 반짝♪",
+                        "comments_work_max": "촬영 전의 몸가짐 체크… 프로듀서, 철저하게 부탁드립니다!",
+                        "comments_work_love_up": "OO 프로듀서도 놀랄 만큼, 고급스러운 오라가 나왔을 터!",
+                        "comments_live": "풍기 넘치는 파티를!",
+                        "comments_love_max": "후후후… OO 프로듀서, 그 시선… 알아요. 사교계의 꽃이라고 말하고 싶죠? 이번 일, 대성공이네요!"
                     },
                     "voice": {
                         "comment": null,
