--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -3366,20 +3366,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "よしっ､上手く書けました! 標語で風紀を取り締まるなんて､我ながらいいｱｲﾃﾞｨｱです｡これでお正月のたるんだ空気を一掃しますよ! OOﾌﾟﾛﾃﾞｭｰｻｰもお手伝い､お願いしますっ!",
-                        "comments_my_1": "年明けの風紀も､私が守ります!",
-                        "comments_my_2": "良いｽﾀｰﾄが切れましたね",
-                        "comments_my_3": "一筆一筆､想いを込めました!",
-                        "comments_my_4": "風紀を守る工夫なら､いくらでも思いつきます｡お任せあれ!",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰも書きますか? あ､服を汚さないように",
-                        "comments_work_1": "寝ぼけ眼は覚ましてあげます!",
-                        "comments_work_2": "気持ちを新たに､いきましょう!",
-                        "comments_work_3": "周知徹底を図りますよ",
-                        "comments_work_4": "ﾙｰﾙを遵守してこそ､良いﾊﾟﾌｫｰﾏﾝｽが生まれる｡そう信じてます!",
-                        "comments_work_max": "むむっ､OOﾌﾟﾛﾃﾞｭｰｻｰ､顔に墨が…はい､取れました!",
-                        "comments_work_love_up": "OOﾌﾟﾛﾃﾞｭｰｻｰ､ｺﾚを一番目立つ所に貼ってください",
-                        "comments_live": "今年も取り締まります!",
-                        "comments_love_max": "年始でもOOﾌﾟﾛﾃﾞｭｰｻｰからは､指導者の熱を感じます! 隣に並び立つ者として､私も更に気を引き締めていきますね!"
+                        "comment": "좋아, 잘 써졌습니다! 표어로 풍기를 단속하다니, 스스로 봐도 좋은 아이디어입니다. 이걸로 정월의 해이해진 공기를 일소하겠습니다! OO 프로듀서도 도움, 부탁드립니다!",
+                        "comments_my_1": "새해의 풍기도, 제가 지킵니다!",
+                        "comments_my_2": "좋은 스타트가 끊어졌네요.",
+                        "comments_my_3": "한필한필, 마음을 담았습니다!",
+                        "comments_my_4": "풍기를 지킬 궁리라면, 얼마라도 생각해낼 수 있습니다. 맡겨주세요!",
+                        "comments_my_max": "OO 프로듀서도 쓰시나요? 아, 옷을 더럽히지 않도록.",
+                        "comments_work_1": "잠에서 덜 깬 눈은 뜨게 해드릴게요!",
+                        "comments_work_2": "마음을 새롭게, 가죠!",
+                        "comments_work_3": "주지 철저를 노릴게요.",
+                        "comments_work_4": "룰을 준수해야만, 좋은 퍼포먼스가 태어난다. 그렇게 믿습니다!",
+                        "comments_work_max": "으음, OO 프로듀서, 얼굴에 먹물이… 네, 지워졌습니다!",
+                        "comments_work_love_up": "OO 프로듀서, 이걸 가장 눈에 띄는 장소에 붙여 주세요.",
+                        "comments_live": "올해도 단속합니다!",
+                        "comments_love_max": "연초에도 OO 프로듀서에게선, 지도자의 열기를 느낍니다! 곁에 선 사람으로서, 저도 더욱 마음을 다잡고 있을게요!"
                     },
                     "voice": {
                         "comment": null,
@@ -3450,20 +3450,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "みなさん､梅の花香る新春ｽﾃｰｼﾞへようこそ! そこｰっ､見逃し厳禁! いつも以上に､背筋をﾋﾟﾝｯと伸ばしてご覧あれ｡幸せいっぱいの一年を願って､幸先の良い超☆万福LIVEをお届けします!",
-                        "comments_my_1": "年明けの風紀も､私が守ります!",
-                        "comments_my_2": "良いｽﾀｰﾄが切れましたね",
-                        "comments_my_3": "美しい舞は､清らかな心から!",
-                        "comments_my_4": "今年も清く正しいｱｲﾄﾞﾙの鑑として､突き進んでいきます!",
-                        "comments_my_max": "凛々しく華やかに! OOﾌﾟﾛﾃﾞｭｰｻｰの視線､頂きます!",
-                        "comments_work_1": "寝ぼけ眼は覚ましてあげます!",
-                        "comments_work_2": "気持ちを新たに､いきましょう!",
-                        "comments_work_3": "年始でもﾋﾞｼｯとｷﾒます! 当然!",
-                        "comments_work_4": "もっと高く! みなさんにとっても飛躍の年になりますように!",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰにも､たくさん幸福が訪れますように!",
-                        "comments_work_love_up": "新春の喜びを分かち合いましょう､OOﾌﾟﾛﾃﾞｭｰｻｰ!",
-                        "comments_live": "いざ､迎春! 祝いましょう!",
-                        "comments_love_max": "晴れやかな一年の幕開けです! 今年も実りの多い日々を重ねましょう｡OOﾌﾟﾛﾃﾞｭｰｻｰと私なら､絶対できますよ!"
+                        "comment": "여러분, 매화 향기나는 신춘 스테이지에 어서 오세요! 거기~, 한눈팔기 엄금! 여느때 이상으로, 등을 쭉 뻗고 보세요. 행복 가득한 한해를 바라며, 징조가 좋은 초☆만복 LIVE를 보내드립니다!",
+                        "comments_my_1": "새해의 풍기도, 제가 지킵니다!",
+                        "comments_my_2": "좋은 스타트가 끊어졌네요.",
+                        "comments_my_3": "아름다운 춤은, 맑은 마음에서!",
+                        "comments_my_4": "올해도 맑고 바른 아이돌의 거울로서, 힘차게 나아가겠습니다!",
+                        "comments_my_max": "늠름하고 화려하게! OO 프로듀서의 시선, 받겠습니다!",
+                        "comments_work_1": "잠에서 덜 깬 눈은 뜨게 해드릴게요!",
+                        "comments_work_2": "마음을 새롭게, 가죠!",
+                        "comments_work_3": "연초에도 팟하고 결정합니다! 당연!",
+                        "comments_work_4": "좀더 높이! 여러분께 큰 비약의 해가 되기를!",
+                        "comments_work_max": "OO 프로듀서에게도, 많은 행복이 찾아오기를!",
+                        "comments_work_love_up": "신춘의 기쁨을 나눠 갖죠, OO 프로듀서!",
+                        "comments_live": "그럼, 영춘! 복 많이 받으세요!",
+                        "comments_love_max": "상쾌한 한해의 개막입니다! 올해도 결실이 많은 나날을 쌓아나가죠. OO 프로듀서와 저라면,  할 수 있어요!"
                     },
                     "voice": {
                         "comment": null,
