--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -3463,7 +3463,7 @@ kg
                         "comments_work_max": "OO 프로듀서에게도, 많은 행복이 찾아오기를!",
                         "comments_work_love_up": "신춘의 기쁨을 나눠 갖죠, OO 프로듀서!",
                         "comments_live": "그럼, 영춘! 복 많이 받으세요!",
-                        "comments_love_max": "상쾌한 한해의 개막입니다! 올해도 결실이 많은 나날을 쌓아나가죠. OO 프로듀서와 저라면,  할 수 있어요!"
+                        "comments_love_max": "상쾌한 한해의 개막입니다! 올해도 결실이 많은 나날을 쌓아나가죠. OO 프로듀서와 저라면, 할 수 있어요!"
                     },
                     "voice": {
                         "comment": null,
@@ -3540,20 +3540,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "『陸に行きたい? 姫様､隣の海藻は青く見えるものです｡海はこんなにも健全で､素晴らしいじゃないですか!』この魚､なかなか骨がありますね｡私の超☆演技で､魅力をお伝えしましょう!",
-                        "comments_my_1": "海の秩序は､私が守ります!",
-                        "comments_my_2": "魚も人魚も､住みやすい国です!",
-                        "comments_my_3": "泳ぎ? ﾌﾌﾝ､任せてください♪",
-                        "comments_my_4": "冷たいような言動も､王国や姫様への熱い想いがあってこそ!",
-                        "comments_my_max": "共感できる役ですね｡OOﾌﾟﾛﾃﾞｭｰｻｰ､気に入りました!",
-                        "comments_work_1": "むむっ､海中風紀が乱れてます!",
-                        "comments_work_2": "姫様を諭すのも､私の役目…!",
-                        "comments_work_3": "いざ! 海中ﾊﾟﾄﾛｰﾙ､開始です!",
-                        "comments_work_4": "『先魚の掟は､守って然るべきです｡清く､正しく､徹底的に!』",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ! 華麗でﾌﾚｯｼｭな活躍をお見逃しなく!",
-                        "comments_work_love_up": "どうです､OOﾌﾟﾛﾃﾞｭｰｻｰ! 見事な魚っぷりでしょう?",
-                        "comments_live": "当然『ﾋﾚ』は抜きません!",
-                        "comments_love_max": "冒険の末に､この子は何を見出すでしょう? 楽しみですね! 答えを探すべく､私も全力で泳ぎますよ､OOﾌﾟﾛﾃﾞｭｰｻｰ!"
+                        "comment": "『육지에 가고 싶어요? 공주, 옆집의 해조는 푸르게 보이는 법입니다.  바다는 이렇게도 건전하고, 멋지지 않나요!』이 생선, 꽤나 기개가 있네요. 제 초☆연기로, 매력을 전하죠!",
+                        "comments_my_1": "바다의 질서는, 제가 지킵니다!",
+                        "comments_my_2": "물고기도 인어도, 살기 좋은 나라입니다!",
+                        "comments_my_3": "수영? 후흥, 맡겨주세요♪",
+                        "comments_my_4": "차가운듯한 언동도, 왕국과 공주를 향한 뜨거운 마음이 있기 때문에!",
+                        "comments_my_max": "공감할 수 있는 역할이네요. OO 프로듀서, 마음에 듭니다!",
+                        "comments_work_1": "으음, 바다속 풍기가 문란합니다!",
+                        "comments_work_2": "공주를 깨우치는 것도, 제 역할…!",
+                        "comments_work_3": "자! 바다속 패트롤, 시작입니다!",
+                        "comments_work_4": "『선어의 법도는, 지켜져야 합니다. 맑고, 바르고, 철저하게!』",
+                        "comments_work_max": "OO 프로듀서! 화려하고 신선한 활약을 놓치지 마세요!",
+                        "comments_work_love_up": "어떤가요, OO 프로듀서! 훌륭한 물고기겠죠?",
+                        "comments_live": "당연히『지느러미』는 뺴먹지 않아요!",
+                        "comments_love_max": "모험 끝에, 이 아이는 무엇을 발견할까요? 기대되네요! 답을 찾기 위해, 저도 전력으로 헤엄칠게요, OO 프로듀서!"
                     },
                     "voice": {
                         "comment": null,
