--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -3888,12 +3888,12 @@ kg
                         "4": "1"
                     },
                     "flash_path": {
-                        "1": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/150/2/idol_gallery--idol_detail--__hash_card_id__--2",
-                        "4": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/150/5/idol_gallery--idol_detail--__hash_card_id__--2"
+                        "1": "../../idol_story/movie_play/150/2/idol_gallery--idol_detail--__hash_card_id__--2",
+                        "4": "../../idol_story/movie_play/150/5/idol_gallery--idol_detail--__hash_card_id__--2"
                     },
                     "voice_url": {
-                        "1": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/150/2/idol_gallery/__hash_card_id__",
-                        "4": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/150/5/idol_gallery/__hash_card_id__"
+                        "1": "../../idol_story/sound_play/150/2/idol_gallery/__hash_card_id__",
+                        "4": "../../idol_story/sound_play/150/5/idol_gallery/__hash_card_id__"
                     },
                     "open_flag": {
                         "1": "1",
