--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -3796,12 +3796,12 @@ kg
                         "2": "1"
                     },
                     "flash_path": {
-                        "0": "../../idol_story/movie_play/416/1/idol_gallery--idol_detail--__hash_card_id__--2",
-                        "2": "../../idol_story/movie_play/416/3/idol_gallery--idol_detail--__hash_card_id__--2"
+                        "0": "../../idol_story/movie_play/416/1.html",
+                        "2": "../../idol_story/movie_play/416/3.html"
                     },
                     "voice_url": {
-                        "0": "../../idol_story/sound_play/416/1/idol_gallery/__hash_card_id__",
-                        "2": "../../idol_story/sound_play/416/3/idol_gallery/__hash_card_id__"
+                        "0": "../../idol_story/sound_play/416/1.html",
+                        "2": "../../idol_story/sound_play/416/3.html"
                     },
                     "open_flag": {
                         "0": "1",
