--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -243,14 +243,14 @@
             <div class="displayBox" style="-webkit-box-pack:center;width:300px;">
                 <div style="width:50%">
                     <a class="btn_3rd_anniversary js_submit_check_idol_comment_3rd m-Top10 t-Cnt jsOnDesignBtn"></a>
-                    <form method="post" action='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/campaign/check_idol_comment' class="form_check_idol_comment_3rd" style="display:none;">
+                    <form method="get" action='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/campaign/check_idol_comment' class="form_check_idol_comment_3rd" style="display:none;">
                         <input type="hidden" name="character_id" value="15">
                         <input type="hidden" name="select_card_hash" value="">
                     </form>
                 </div>
                 <div style="width:50%">
                     <a class="btn_5th_anniversary js_submit_check_idol_comment_5th m-Top10 t-Cnt jsOnDesignBtn"></a>
-                    <form method="post" action='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/campaign_present/redirect_flash_idol_comment_replay' class="form_check_idol_comment_5th" style="display:none;">
+                    <form method="get" action='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/campaign_present/redirect_flash_idol_comment_replay' class="form_check_idol_comment_5th" style="display:none;">
                         <input type="hidden" name="card_hash" value="">
                         <input type="hidden" name="redirect_url" value="">
                         <input type="hidden" name="campaign_id" value="114">
@@ -472,7 +472,7 @@ kg
 <% val2 = val.icon[key2] %>
 <% if (+val.open_flag[key2]) { %>
 <li style="<% if (total == 2) { %>width:50%;<% } else if(total == 3) { %> width:33%; <% } else { %>margin:0 5px;<% } %>">
-<form method="post" action="<%- val.flash_path[key2].replace('__hash_card_id__', idol_detail.data.hash_card_id) %>" style="height:90px;">
+<form method="get" action="<%- val.flash_path[key2].replace('__hash_card_id__', idol_detail.data.hash_card_id) %>" style="height:90px;">
 <input type="image" src="<%- val2 %>" height="75" class="jsOnDesignBtn"><br>
 <% if (+val.voice_enable[key2]) { %>
 <input class="movie_name jsOnDesignBtn" type="image" src="<%- val.movie_name_voice[key2] %>" width="77" style="width:77px;position:relative;top:-15px;"><br>
